# ParaCDCL

./: .gitignore  Makefile  README.md  _CoqProject  paracdcl.opam  test.sh
.github/workflows/: build.yml
src/: CDCLDemo.v  CDCLstatemachine.v  CDCLtransition.v  rproof.v
tests/: CDCLDemo.v  CDCLPrintTests.ml  randomCNFgen.py
